--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
@@ -44,6 +44,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.14",
+    "typescript": "^5.8.2",
     "vite": "^6.2.1"
   }
 }
