refactored InputField to remove abundant code for styling

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
       "baseUrl": ".",
+      "moduleResolution": "nodenext",
+      "module": "NodeNext",
       "paths": {
         "@/*": ["./src/*"]
       }
