--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
